# fetch_MCP_rust

./: .gitignore  Cargo.toml  README.md
src/: config.rs  fetch_tool.rs  lib.rs  main.rs
src/mcp/: jsonrpc.rs  mod.rs  stdio.rs
tests/: allowlist.rs  e2e.rs  framing.rs
