[package]
name = "fetch_mcp_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "High-performance Rust implementation of an MCP fetch server"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/your-org/fetch_mcp_rust"
homepage = "https://github.com/your-org/fetch_mcp_rust"
documentation = "https://github.com/your-org/fetch_mcp_rust#readme"
keywords = ["mcp", "jsonrpc", "fetch", "tokio", "reqwest"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes = "1"
futures = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "http2", "rustls-tls-native-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
globset = "0.4"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
once_cell = "1"
