[package]
name = "fetch_MCP_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.2.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

