[package]
name = "fetch_MCP_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.2.0", features = ["client", "server", "macros", "transport-io", "transport-child-process", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

